# estate_predictor

./: .gitignore  CMakeLists.txt  README.md  estate_parser.ini
include/: engine.hpp  generals.hpp
src/: engine.cpp
